# Coin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SETUP.md  docker-compose.yml  import_neo4j.py  pyproject.toml  requirements.txt  setup.sh  start_backend.bat
.github/workflows/: ci.yml
backend/: .env.example  REFACTORING_README.md  app_new.py  app_old_backup.py  benchmark.py  config.py  database_setup.py  environment.yml  inference_worker.py  test_http.py  test_qa_modes.py
backend/instance/: classification_full.json
backend/models/: __init__.py  model_loader.py
backend/routes/: __init__.py  artifacts.py  auth.py  predict.py  qa.py  report.py  user_actions.py  valuation.py
backend/services/: __init__.py  data_parser.py  inference_service.py  onnx_service.py  rag_service.py  yolo_service.py
backend/tests/: conftest.py  test_artifacts.py  test_auth.py  test_health.py  test_predict.py  test_qa.py
backend/utils/: __init__.py  database.py  decorators.py  helpers.py  log.py
data/: merged_graph.pkl  summarized_graph.pkl  text_units_df.parquet
data/artifacts/: communities_reports.parquet  community_info.pickle  entities.parquet  merged-graph.pickle  relationships.parquet  summarized-graph.pickle  text_units.parquet
doces/: 项目分析与落地计划.md
docs/: 分类体系文档.md  数据集文档.md  知识库统计报告.md
docs/adr/: 001-flask-backend.md  002-dual-image-input.md  003-graphrag.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: ArtifactCard.vue  KG.vue  ProfileAccount.vue  ProfileFavorites.vue  QA.vue
frontend/src/composables/: useChatStream.js  useImageUpload.js
frontend/src/config/: api.js  http.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: AboutView.vue  ArtifactDetailView.vue  HomeView.vue  KnowledgeEntry.vue  LandingView.vue  LoginView.vue  NotFoundView.vue  PredictView.vue  ProfileView.vue  RegisterView.vue  ToolsView.vue  ValuationView.vue
training/: README.md  coins.csv  model.py  test.py  train.py
training/kinds/: data.csv  test.csv  train.csv  val.csv
training/kinds/model/: d.py  epoch_metrics.csv  make.py  train_class_accuracies.csv  val_class_accuracies.csv
training/scores/: data.csv  test.csv  train.csv  val.csv
training/scores/model/: d.py  epoch_metrics.csv  make.py  show.py  (+3 more)
vector_stores/: chroma.sqlite3
