[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "jianquan-shizhen"
version = "2.1.0"
description = "鉴泉识珍 — 古钱币智能鉴定与知识图谱问答系统"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "鉴泉识珍项目组"},
]
keywords = ["coin-identification", "knowledge-graph", "computer-vision", "rag", "numismatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "flask-limiter>=3.0",
    "python-dotenv>=1.0",
    "bcrypt>=4.0",
    "pyjwt>=2.8",
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pillow>=10.0",
    "torch>=2.4",
    "torchvision>=0.19",
    "ultralytics>=8.2",
    "onnxruntime>=1.18",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-chroma>=0.1",
    "langchain-community>=0.3",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "chromadb>=0.5",
    "neo4j>=5.0",
    "py2neo>=2021.2",
    "openai>=1.50",
    "tiktoken>=0.7",
    "fpdf2>=2.8",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-flask>=1.3",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]
graphrag = [
    "langchain-graphrag>=0.0.9",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*", "backend/instance/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
